fixed overflow with the grid #2

--- a/style.css
+++ b/style.css
@@ -132,7 +132,6 @@ cells
 	position: relative;
 }
 .row div svg {
-	overflow: visible;
 	position: absolute;
 	top: 0;
 	left: 0;
